# msearch-utils

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
benchmark-dataset/: 2024-05-bert-model-search-benchmark-dataset.csv
msearch_utils/: app.py  main.py  utils.py
