[tool.poetry]
name = "msearch-utils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "msearch_utils"}]

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.11.0"
streamlit = "^1.21.0"
black = "^23.3.0"
pysimplegui = "^4.60.4"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
