[tool.poetry]
name = "msearch-utils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "msearch_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.11.0"
black = "^23.3.0"
pydantic = "^1.10.7"
typer = {extras = ["all"], version = "^0.7.0"}
pytest = "^7.3.1"

[tool.poetry.scripts]
mse = "msearch_utils.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
